// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar SNAPSHOTS should render 1`] = `
<ProgressBar
  value={40}
>
  <Div
    className="progressbar-wrapper"
  >
    <div
      className="progressbar-wrapper"
    >
      <div
        className="progressbar-fill"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <Value
          className="progressbar-value"
          data-value={40}
        >
          <Span
            className="progressbar-value"
            data-value={40}
          >
            <span
              className="progressbar-value"
              data-value={40}
            >
              40%
            </span>
          </Span>
        </Value>
      </div>
    </div>
  </Div>
</ProgressBar>
`;

exports[`ProgressBar SNAPSHOTS should render value in controllable mode 1`] = `
<ProgressBar
  value={40}
>
  <Div
    className="progressbar-wrapper"
  >
    <div
      className="progressbar-wrapper"
    >
      <div
        className="progressbar-fill"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <Value
          className="progressbar-value"
          data-value={40}
        >
          <Span
            className="progressbar-value"
            data-value={40}
          >
            <span
              className="progressbar-value"
              data-value={40}
            >
              40%
            </span>
          </Span>
        </Value>
      </div>
    </div>
  </Div>
</ProgressBar>
`;

exports[`ProgressBar SNAPSHOTS should render value in controllable mode 2`] = `
<ProgressBar
  value={50}
>
  <Div
    className="progressbar-wrapper"
  >
    <div
      className="progressbar-wrapper"
    >
      <div
        className="progressbar-fill"
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Value
          className="progressbar-value"
          data-value={50}
        >
          <Span
            className="progressbar-value"
            data-value={50}
          >
            <span
              className="progressbar-value"
              data-value={50}
            >
              50%
            </span>
          </Span>
        </Value>
      </div>
    </div>
  </Div>
</ProgressBar>
`;
